# Pee51_HIL-25

ems_code/: EMS.logic2Preset
ems_code/c_code/interface/: .gitignore  CMakeLists.txt  ems.c  ems.h  integration.c  interface.c  interface.h  main.c  ui.c  ui.h
ems_code/integration_test/: CMakeLists.txt  UARTqueue.c  UARTqueue.h  ems.c  ems.h  spiQueue.c  spiQueue.h  test.c  ui.c
ems_code/stm_code/ems_rtos/: .cproject  .gitignore  .mxproject  .project  STM32H563ZITX_FLASH.ld  ems_rtos.ioc
ems_code/stm_code/ems_rtos/Core/Inc/: FreeRTOSConfig.h  UARTqueue.h  app_freertos.h  ems.h  gpdma.h  linked_list.h  main.h  spiQueue.h  stm32h5xx_hal_conf.h  stm32h5xx_it.h  ui.h
ems_code/stm_code/ems_rtos/Core/Src/: UARTqueue.c  app_freertos.c  ems.c  gpdma.c  gpio.c  linked_list.c  main.c  spi.c  spiQueue.c  stm32h5xx_hal_timebase_tim.c  stm32h5xx_it.c  tim.c  ui.c  usart.c
ems_code/unit_test/interface/: CMakeLists.txt  ems.c  ems.h  main.c  test  test.c
ems_code/unit_test/justbuffer/: .gitignore  README.md
ems_code/unit_test/justbuffer/VSCode/: CMakeLists.txt  CMakePresets.json
ems_code/unit_test/justbuffer/VSCode/doc/src/: header.html
ems_code/unit_test/justbuffer/VSCode/inc/: MCP2210.h  comPort.h  spiQueue.h  spiQueueEvil.h
ems_code/unit_test/justbuffer/VSCode/src/: MCP2210.c  comPort.c  gtest.cc  spiQueue.c  spiQueueEvil.c
