cmake_minimum_required(VERSION 3.27)
project(main)
add_executable(main main.c ems.c interface.c ui.c)
add_executable(integration integration.c ems.c interface.c ui.c)
target_compile_options(main PRIVATE -std=c18 -Wall -Wextra -Wpedantic -g3 -O0)
target_compile_options(integration PRIVATE -std=c18 -Wall -Wextra -Wpedantic -g3 -O0)
# add_executable(test_btree test_btree.cpp btree.c)
# add_executable(test_bigtree test_bigtree.cpp bigtree.c)
# set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c18 -Wall -Wextra -Wpedantic -g3 -O0")
# target_link_libraries(test_btree GTest::gtest_main)
# target_link_libraries(test_bigtree GTest::gtest_main)
# include(CTest)
# find_package(GTest REQUIRED)
# include(GoogleTest)
# gtest_discover_tests(test_btree)
